--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,24 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
+  "name": "React Chrome Extension",
+  "version": "1.0.0",
+  "manifest_version": 3,
+  "content_scripts": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "matches": ["*://*.bamboohr.com/employees/timesheet/*"],
+      "js": ["contentScript.js"]
     }
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "action": {
+    "default_title": "Chrome Extension With React",
+    "default_popup": "popup.html"
+  },
+  "permissions": [
+    "storage", "activeTab"
+  ],
+  "icons": {
+    "16": "lemonboo16.png",
+    "32": "lemonboo32.png",
+    "48": "lemonboo48.png",
+    "128": "lemonboo128.png"
+  }
 }
